# helpdesk

./: .env.example  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
client/: Dockerfile  next.config.mjs  vitest.config.ts
client/__tests__/: TicketForm.test.tsx  TicketList.test.tsx
client/app/: globals.css  layout.tsx  page.tsx
client/app/board/: page.tsx
client/app/login/: page.tsx
client/app/register/: page.tsx
client/app/tickets/new/: page.tsx
client/components/: AppShell.tsx  Filters.tsx  KanbanBoard.tsx  TicketForm.tsx  ToastProvider.tsx
client/lib/: api.ts  types.ts
db/: init.sql
server/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
server/app/: auth.py  config.py  main.py  models.py  routes.py  schemas.py  security.py  seed.py
server/migrations/versions/: 0002_create_users.py  0003_add_ticket_position.py
server/tests/: conftest.py  test_tickets.py
