[project]
name = "support-ticket-api"
version = "1.0.0"
description = "Backend API for the support ticket dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlmodel>=0.0.22,<0.1",
    "pydantic-settings>=2.5,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "email-validator>=2.1,<3.0",
    "bcrypt>=4.1,<5.0",
    "pyjwt>=2.8,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
